# lupi

./: .dockerignore  Dockerfile.game_server  Dockerfile.ui  Dockerfile.ui-tests  Makefile  PLAN.md  README.md  docker-compose.override.yaml  docker-compose.yaml  openapi.yaml
db/: Dockerfile  init-user-db.sh
game_server/: Dockerfile  api.py  app.py  game.py  openapi.yaml  pyproject.toml  requirements.txt  test_api.py  test_game.py  wsgi.py
game_server/lupi/: api.py  app.py  conftest.py  data.py  game.py  model.py  openapi.yaml  stats.py  test_api.py  test_data.py
lupi_game_client/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  tox.ini
lupi_game_client/.openapi-generator/: FILES
lupi_game_client/docs/: GameApi.md  ListOfRounds.md  Paging.md  Round.md  RoundDetails.md  RoundResult.md  StatsApi.md  Vote.md
lupi_game_client/lupi_game_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
lupi_game_client/test/: test_game_api.py  test_list_of_rounds.py  test_paging.py  test_round.py  test_round_details.py  test_round_result.py  test_stats_api.py  test_vote.py
lupi_game_server/: Dockerfile  api.py  conftest.py  create_db.py  game.py  model.py  openapi.yaml  stats.py  test_api.py  test_game.py  test_model.py
lupi_ui/: app.py  conftest.py  game_server.py  pyproject.toml  requirements-tests.txt  requirements.txt  test_history_page.py  test_main_page.py  test_round_details_page.py
lupi_ui/static/: style.css
lupi_ui/templates/: _formhelpers.html  (+4 more)
scripts/: wait-for-http  wait-for-postgres
ui/: Dockerfile  app.py  pyproject.toml
(+10 files in other folders)
