[tool.poetry]
name = "lupi_game_server"
version = "0.1.0"
description = "Least Unique Positive Integer Game Server"
authors = ["Fekete Krisztián <e3krisztian@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.8"
connexion = {extras = ["swagger-ui"], version = "^2.7.0"}
Flask-SQLAlchemy = "^2.4.4"
psycopg2-binary = "^2.8.5"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
python-dateutil = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
