[tool.poetry]
name = "lupi_ui"
version = "0.1.0"
description = "Least Unique Positive Integer WEB UI"
authors = ["Fekete Krisztián <e3krisztian@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
